[package]
name = "rustysea_fuzz"
version = "0.0.1"
authors = ["Sam Kerr"]
publish = false

[package.metadata]
cargo-fuzz = true

[dependencies.rusty_sea]
path = ".."
[dependencies.libfuzzer-sys]
git = "https://github.com/rust-fuzz/libfuzzer-sys.git"

# Prevent this from interfering with workspaces
[workspace]
members = ["."]

[[bin]]
name = "fuzz_string_parse"
path = "fuzz_targets/fuzz_string_parse.rs"
